--- a/website.html
+++ b/website.html
@@ -16,6 +16,9 @@
               <a href="/">Home</a>
             </li>
             <li>
+              <a href="/">Blog</a>
+            </li>
+            <li>
               <a href="/">Contact</a>
             </li>
           </ul>
@@ -32,7 +35,6 @@
             <input type="submit" value="Submit">
         </form>
         <h2>Categories</h2>
-        <nav>
         <ul>
             <li>
             <a href="/">Latest</a>
@@ -46,8 +48,7 @@
             <li>
             <a href="/">Sports</a>
             </li>
-        </ul>
-        </nav>
+          </ul>
         <h2>Latest</h2>
         <h3> Breaking News</h3>
         <img src="https://i.imgur.com/sOUgMbE.jpg" alt="A. Cat">
@@ -71,7 +72,7 @@
             <h2>Comments</h2>
             <form>
                 <div>
-                <textarea name="comments" id="comments" style="font-family:sans-serif;font-size:1.2em;">
+                <textarea name="comments" id="comments" style="font-family:sans-serif;font-size:1.2em;width: 1000px; height: 100px;">
                 </textarea>
                 </div>
                 <div>
@@ -79,12 +80,17 @@
                 </form>
                 </div>
             <hr>
-            <img src="https://www.shutterstock.com/image-vector/blank-image-placeholder-profile-picture-260nw-1923893873.jpg" alt="user image blank">
+            <img src="https://www.shutterstock.com/image-vector/blank-image-placeholder-profile-picture-260nw-1923893873.jpg" alt="user image blank" width="100px" height="100px">
             <h3>Username</h3>
             <h4>Posted: 23/03/2020</h4>
             <p>This was interesting. Thanks.</p>
             <hr>
-            <img src="https://www.shutterstock.com/image-vector/blank-image-placeholder-profile-picture-260nw-1923893873.jpg" alt="user image blank">
+            <img src="https://www.shutterstock.com/image-vector/blank-image-placeholder-profile-picture-260nw-1923893873.jpg" alt="user image blank" width="100px" height="100px">
+            <h3>Username</h3>
+            <h4>Posted: 23/03/2020</h4>
+            <p>This was interesting. Thanks.</p>
+            <hr>
+            <img src="https://www.shutterstock.com/image-vector/blank-image-placeholder-profile-picture-260nw-1923893873.jpg" alt="user image blank" width="100px" height="100px">
             <h3>Username</h3>
             <h4>Posted: 23/03/2020</h4>
             <p>Thanks. I hate it.</p>
